--- a/serverless.yml
+++ b/serverless.yml
@@ -8,6 +8,11 @@ plugins:
 # serverless-webpack configuration
 # Enable auto-packing of external modules
 custom:
+  stage: ${opt:stage, self:provider.stage}
+  tableThroughputs:
+    prod: 5
+    default: 1
+  tableThroughput: ${self:custom.tableThroughputs.${self:custom.stage}, self:custom.tableThroughputs.default}
   webpack:
     webpackConfig: ./webpack.config.js
     includeModules: true
@@ -18,8 +23,12 @@ provider:
   stage: dev
   region: eu-central-1
 
-  # 'iamRoleStatement' defines the permission policy for the Lambda function.
-  # In this case Lambda functions are granted with permissions to access DynamoDB.
+ # These environment variables are made available to our functions
+  # under process.env.
+  environment:
+    tableName:
+      Ref: NotesTable
+
   iamRoleStatements:
     - Effect: Allow
       Action:
@@ -30,7 +39,10 @@ provider:
         - dynamodb:PutItem
         - dynamodb:UpdateItem
         - dynamodb:DeleteItem
-      Resource: "arn:aws:dynamodb:us-east-1:*:*"
+      # Restrict our IAM role permissions to
+      # the specific table for the stage
+      Resource:
+        - "Fn::GetAtt": [ NotesTable, Arn ]
 
 functions:
   # Defines an HTTP API endpoint that calls the main function in create.js
@@ -95,3 +107,6 @@ functions:
           method: delete
           cors: true
           authorizer: aws_iam
+
+resources:
+  - ${file(resources/dynamodb-table.yml)}
