Adding our S3 resource

--- a/serverless.yml
+++ b/serverless.yml
@@ -109,4 +109,7 @@ functions:
           authorizer: aws_iam
 
 resources:
+  # DynamoDB
   - ${file(resources/dynamodb-table.yml)}
+  # S3
+  - ${file(resources/s3-bucket.yml)}
